[package]
name = "mnml-tickets-linear"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Linear ticket viewer for mnml — terminal TUI with configurable tabs (saved views or GraphQL filter). Runs standalone or as an mnml-hosted pane."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-tickets-linear"
readme = "README.md"

[[bin]]
name = "mnml-tickets-linear"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
url = "2"
webbrowser = "1"

# Blit-host mode — same wire protocol mnml + mixr + tmnl share.
tmnl-protocol = { path = "../tmnl-protocol" }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
